Fix line shift. Add new reading content and external link.

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ a {
 
 li {
     font-size: 1.3em;
+    line-height: 1.3em;
     margin-bottom: 1em;
 }
 
